# aisdk

./: CHANGELOG.md  Cargo.toml
examples/: stream_tool_probe.rs
examples/react-axum-agent/: README.md
examples/react-axum-agent/backend/: .env.example  Cargo.toml
examples/react-axum-agent/backend/src/: main.rs  tools.rs
examples/react-axum-agent/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
examples/react-axum-agent/frontend/src/: App.tsx  index.css
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: test_tools.rs
src/core/: client.rs  mod.rs  tools.rs
src/core/embedding_model/: mod.rs  request.rs
src/core/language_model/: generate_text.rs  mod.rs  request.rs  stream_text.rs
src/integrations/: vercel_aisdk_ui.rs
src/providers/: mod.rs
src/providers/anthropic/: conversions.rs  language_model.rs  mod.rs  settings.rs
src/providers/anthropic/client/: mod.rs  types.rs
src/providers/google/: conversions.rs  embedding_model.rs  language_model.rs  mod.rs  settings.rs
src/providers/google/client/: mod.rs
src/providers/inception/: capabilities.rs  mod.rs
src/providers/openai/: conversions.rs  embedding_model.rs  language_model.rs  mod.rs  settings.rs
src/providers/openai_chat_completions/: conversions.rs  embedding_model.rs  language_model.rs  macros.rs  settings.rs
src/providers/openai_compatible/: embedding_model.rs  mod.rs  settings.rs
src/providers/vllm/: capabilities.rs  conversions.rs  language_model.rs  mod.rs  settings.rs
src/providers/xai/: capabilities.rs
tests/provider/: inception_tests.rs  macros.rs
(+8 files in other folders)
