[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
aisdk = { path = "../../..", features = ["axum", "google", "openai"] }
axum = "0.8.8"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
